# azumi-live-ssr-framework

./: .LICENSE.kate-swp  .gitignore  AGENTS.md  AI_COOKBOOK.md  AI_GUIDE_FOR_WRITING_AZUMI.md  ASSET_PIPELINE_DESIGN.md  AZUMI_CLIENT_FEATURES.md  AZUMI_DESCRIPTION.md  CHANGELOG.md  Cargo.toml  DESIGN_ROUTE_SAFETY.md  FRAMEWORK_COMPARISON.md  HOT_RELOAD.md  MIGRATION.md  PROPOSALS.md  README.md  REVIEW.md  REVIEW_2026-05-17.md  REVIEW_CHANGES_2026-05-17.md  REVIEW_SESSION_SUMMARY.md  TODO.md  WHEN_TO_USE_AZUMI.md  audit-tasks.md  build.rs  deny.toml  package.json  tasks.md  todo.md
.dracon/: project-state.md
.github/workflows/: ci.yml
.internal/: DESIGN_ROUTE_SAFETY.md  GITHUB_SEO.md  POSITIONING_2026-05-17.md  PROPOSALS.md  REVIEW_2026-05-17.md
.ralph/: azumi-demo-review.md  azumi-demo-review.state.json  azumi-full-audit.md  azumi-full-audit.state.json  azumi-improvements.md  azumi-improvements.state.json  azumi-mega-audit.md  azumi-mega-audit.state.json  azumi-open-items.md  azumi-open-items.state.json  azumi-p0-implementation.md  azumi-p0-implementation.state.json  azumi-p0-tests-and-docs.md  azumi-p0-tests-and-docs.state.json  azumi-p1-polish.md  azumi-p1-polish.state.json  azumi-positioning.md  azumi-positioning.state.json  azumi-transitions.md  azumi-transitions.state.json  demo-acolyte-fixes.md  demo-acolyte-fixes.state.json  fix-demo-static-attrs.md  fix-demo-static-attrs.state.json
benches/: escape.rs  full_page.rs  render.rs  scope_css.rs
build_support/: minify_js.rs
cli/: Cargo.toml  build.rs
cli/src/: main.rs  version.rs
cli/src/templates/: Cargo.toml.hbs  main.rs.hbs  mod.rs
cli/src/templates/components/: lib.rs.hbs
client/: README.md  azumi.d.ts  azumi.js  azumi.js.backup  idiomorph.js
client/tests/: retry.test.js
demo/: Cargo.toml  assets_manifest.json  build.rs
demo/src/: main.rs
demo/src/actions/: contact.rs  like.rs  mod.rs
demo/src/examples/: azumi_plus_demo.rs  class_syntax_verification.rs  confirm.rs  css_variables.rs  form_validation_demo.rs  mod.rs  spinner.rs
demo/src/examples/blog/: actions.rs  data.rs  layout.rs  mod.rs  pages.rs
demo/src/examples/lessons/components/: auth_infra.rs  lesson_nav.rs  mod.rs
demo/src/examples/lessons/pages/: AZUMI_LESSON_PLAN.md  homepage.rs  lesson0.rs  lesson1.rs  lesson10.rs  lesson11.rs  lesson12.rs  lesson13.rs  lesson14.rs  lesson15.rs  lesson16.rs  lesson17_testing.rs  lesson18_security.rs  lesson19_auth.rs  lesson2.rs  lesson20_sliders.rs  lesson3.rs  lesson4.rs  lesson5.rs  lesson6.rs  lesson7.rs  lesson8.rs  lesson9.rs
demo/static/: azumi.js
docs/: SECURITY_AUDIT.md  architecture.md  comparison.md  guide.md  interactivity.md  why-azumi.md
docs/archive/: AI_SUITABILITY_REPORT.md  CONCEPT_AUTH_AND_DATA_FLOW.md  LAUNCH_MANIFEST.md  PATTERN_EXTRACTORS_VS_EXTENSIONS.md  architecture.md  comparison.md  dracon-platform-analysis.md  js-exposure-analysis.md
docs/migration/: from-axum.md  v42.md  v43.md  v48.md
docs/perf/: baseline_v47.0.0.md  baseline_v47.0.0.txt
examples/todo/: Cargo.toml
examples/todo/src/: main.rs
macros/: Cargo.toml
macros/src/: accessibility_validator.rs  action.rs  asset_rewriter.rs  codegen.rs  component.rs  context.rs  css.rs  css_validator.rs  head.rs  html_rules.rs  html_structure_validator.rs  inline_inject.rs  lib.rs  live.rs  page.rs  schema.rs  style.rs  style_processing.rs  tag_data.rs  token_parser.rs  validators.rs
plans/: 2026-05-12-TODO-v1.md  2026-05-13-2026-05-13-class-expression-consistency-v1.md  2026-05-13-2026-05-13-class-expression-style-consistency-v1.md  2026-05-13-attribute-expression-consistency-v1.md  2026-05-13-attribute-value-consistency-fix-v1.md  2026-05-13-azumi-comprehensive-review-2026-05-13-v2.md  2026-05-13-azumi-comprehensive-review-v1.md  2026-05-13-azumi-master-todo-2026-05-13-v1.md  2026-05-13-azumi-master-todo-v1.md
src/: action.rs  client.min.js  context.rs  csp.rs  css_scoping.rs  devtools.rs  form.rs  hot_reload.rs  lib.rs  script.rs  security.rs  seo.rs  streaming.rs  tests.rs
src/test/: mod.rs
static/: azumi.js
tests/: accessibility_tests.rs  action_xss_tests.rs  attribute_tests.rs  azumi_js_tests.js  bind_value_tests.rs  borrowed_props_tests.rs  build_tests.rs  compile_fail.rs  component_nested_macro_tests.rs  component_stress_tests.rs  context_path_tests.rs  csp_middleware_tests.rs  escape_tests.rs  fn_once_component_tests.rs  form_tests.rs  head_tests.rs  html_attribute_tests.rs  inline_inject_tests.rs  integration_inject_tests.rs  keyed_tests.rs  live_handler_integration_tests.rs  live_stress_tests.rs  live_tests.rs  macro_edge_cases.rs  minimal_test.rs  named_args_tests.rs  page_meta_tests.rs  page_stress_tests.rs  register_actions_tests.rs  route_constant_tests.rs  security_tests.rs  security_xss_tests.rs  seo_tests.rs  session_cleanup_tests.rs  simple_debug.rs  styling_stress_tests.rs  test_direct.rs  test_expr.rs  transition_tests.rs
tests/ui/: 01-raw-blocked.rs  01-raw-blocked.stderr  02-raw-format-blocked.rs  02-raw-format-blocked.stderr  03-format-html-blocked.rs  03-format-html-blocked.stderr  04-format-js-blocked.rs  04-format-js-blocked.stderr  05-format-css-blocked.rs  05-format-css-blocked.stderr  06-macros-work.rs  07-raw-in-if-block.rs  07-raw-in-if-block.stderr  08-safe-format.rs  09-raw-azumi-path.rs  09-raw-azumi-path.stderr  11-raw-in-for.rs  11-raw-in-for.stderr  12-raw-in-match.rs  12-raw-in-match.stderr  13-raw-in-attribute.rs  13-raw-in-attribute.stderr  14-class-external.rs  14-class-static-banned.stderr  15-class-external-works.rs
