[package]
name = "azumi-cli"
version = "47.20.46"
edition = "2021"
authors = ["DraconDev <dracsharp@gmail.com>"]
license = "AGPL-3.0-only"
description = "Scaffolding CLI for Azumi web framework"
repository = "https://github.com/DraconDev/azumi-live-ssr-framework"
keywords = ["cli", "scaffold", "web", "framework"]
categories = ["command-line-utilities", "web-programming"]

[workspace]
