[package]
name = "azumi-cli"
version = "47.20.46"
edition = "2021"
authors = ["DraconDev <dracsharp@gmail.com>"]
license = "AGPL-3.0-only"
description = "CLI for Azumi — live SSR web framework for Rust"
repository = "https://github.com/DraconDev/azumi-live-ssr-framework"
keywords = ["cli", "ssr", "web-framework", "htmx", "scaffold"]
categories = ["command-line-utilities", "web-programming"]

[workspace]
