[package]
name = "azumi-cli"
version = "47.45.0"
edition = "2021"
authors = ["DraconDev <dracsharp@gmail.com>"]
license = "AGPL-3.0-only"
description = "CLI for Azumi — Live SSR framework for Rust (builds on Axum). Project scaffolding and dev server with hot reload."
repository = "https://github.com/DraconDev/azumi-live-ssr-framework"
keywords = ["cli", "ssr", "web-framework", "htmx", "scaffold"]
categories = ["command-line-utilities", "web-programming"]

[workspace]
