[package]
name = "azumi-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
notify = "6.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
azumi-live-ssr-framework = { path = "..", features = ["schema", "test-utils", "devtools"] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
rusqlite = { version = "0.30", features = ["bundled"] }
chrono = "0.4"
tower-http = { version = "0.5", features = ["fs", "set-header"] }
rand = "0.8"
serde_json = "1.0.145"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros"] }
phf = { version = "0.13.1", features = ["macros"] }
axum-extra = { version = "0.10", features = ["cookie"] }

[build-dependencies]
hex = "0.4.3"
phf_codegen = "0.13.1"
serde_json = "1.0.145"
sha2 = "0.10.9"
walkdir = "2.5.0"
