[package]
name = "azumi-macros"
version = "7.0.0"
edition = "2021"
description = "Procedural macros for Azumi web framework"
repository = "https://github.com/DraconDev/azumi"
license-file = "../LICENSE"
keywords = ["html", "template", "macro", "web"]
categories = ["template-engine", "web-programming"]

[lib]
proc-macro = true

[features]
schema = []

[dependencies]
fnv = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
heck = "0.5"
lightningcss = "1.0.0-alpha.68"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
