[package]
name = "azumi-macros"
version = "8.0.0"
edition = "2021"
description = "Procedural macros for Azumi — Live SSR framework for Rust. Provides html!, #[azumi::component], #[azumi::live], #[azumi::action] with compile-time validation."
repository = "https://github.com/DraconDev/azumi-live-ssr-framework"
license = "AGPL-3.0-only"
keywords = ["html", "htmx", "ssr", "macro", "compile-time"]
categories = ["template-engine", "web-programming", "gui"]

[lib]
proc-macro = true

[features]
schema = []

[dependencies]
fnv = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
heck = "0.5"
# Pinned to exact alpha — monitor for stable release before bumping
lightningcss = "=1.0.0-alpha.68"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
