[package]
name = "azumi-todo-example"
version = "0.1.0"
edition = "2021"

[dependencies]
azumi = { path = "../.." }
axum = { version = "0.8", features = ["form"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }

[[bin]]
name = "todo"
path = "src/main.rs"
